# discord_bot_rust

./: Cargo.toml  token.txt
src/: convertor.rs  main.rs
