[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.14"
tracing-futures = "0.2"
tokio = { version="1.19.2", features= ["macros", "rt-multi-thread", "signal"]}
serenity = {version="0.10", default-features=false, features=["cache", "standard_framework", "client", "gateway", "model", "rustls_backend", "voice"]}
image = "0.24.2"
songbird = "0.2.2"
